<package>
  <name>cartesian_servo</name>
  <version>0.1.0</version>
  <description>Cartesian-space streaming servo with exponential smoothing for ES5 robot</description>
  <maintainer email="l.gruszka@sorter.pl">Lukasz Gruszka</maintainer>

  <license>BSD</license>

  <author email="l.gruszka@sorter.pl">Lukasz Gruszka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>

  <export>
    <rtt_plugin_depend>rtt_ros</rtt_plugin_depend>
  </export>
</package>
